upgrade gradle to 7.5.1
Signed-off-by: shalom <shalom938@gmail.com>